[package]
name = "osulib"
version = "0.1.0"
edition = "2021"

homepage = "https://github.com/wcaleniekubaa/osulib"
license = "MIT"
authors = ["wcaleniekubaa"]

description = "A simple parser for osu! files."

[dependencies]
bitflags = { version = "2.7.0", features = ["std"] }
nalgebra-glm = "0.19.0"
serde = { version = "1.0.217", features = ["derive"], optional = true }
thiserror = "2.0.10"

[features]
serde = ["dep:serde", "nalgebra-glm/serde-serialize", "bitflags/serde"]

[dev-dependencies]
toml = "0.8.19"
